--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Ejercicio de creacion Branch</title>
+	<title>Branch</title>
 </head>
 <body>
-
-	
+	<div>
+		<img src="gif/gif.gif" alt="Bailando">
+	</div>
 </body>
 </html>
