--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 	<div>
 		<img src="gif/gif.gif" alt="Bailando">
 	</div>
+	<div><!--inicio gif Tania-->
+		<img src="gif/giphy.gif" alt="deadpool">
+	</div><!--termina gif Tania-->
 </body>
 </html>
